Ensure keep autoexpand keep shards of remaining nodes
Adding a test that ensures that during node replacement autoexpand
removes a shard from node to be shutdown (and not any other node)
and adds a new one to the replacement node.